# ninuka-quiz

./: ASSIGNMENT_ANALYSIS.md  CURRENT_STATE.md  QUESTION_GENERATOR_DESIGN.md  README.md  generate_questions.py  main.py  ninouk2.xlsx  push-all.sh  pyproject.toml  run_gap_analysis.py  tion generator system with all modules
data/reference_lists/: top_artists.json  top_brands.json  top_countries.json  top_movies.json
gap_analysis/: __init__.py  data_loader.py  entity_recognition.py  gap_reporter.py  ngram_analysis.py  quality_checker.py  semantic_clustering.py  sociological_taxonomy.py  utils.py
outputs/: README.md  entity_coverage.csv  gap_analysis_report.md  generated_questions.xlsx  ngram_patterns.csv  quality_report.csv  quality_report_violations.csv  taxonomy_coverage.csv  ~$generated_questions.xlsx
question_generator/: __init__.py  answer_generator.py  gap_loader.py  question_exporter.py  question_generator.py  question_templates.py  question_validator.py  semantic_checker.py
